change this variables in .env file

--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@ DOMAIN=localhost
 ENVIRONMENT=local
 
 PROJECT_NAME="Full Stack FastAPI Project"
-STACK_NAME=CAI-fastapi-project
+STACK_NAME=full-stack-fastapi-project
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
-SECRET_KEY=changethis
-FIRST_SUPERUSER=admin@example.com
-FIRST_SUPERUSER_PASSWORD=changethis
+SECRET_KEY=LtTlOIOen1Jl__njcUlf9H_l7msHXdKptkkGISEEhso
+FIRST_SUPERUSER=dguarnizo2@gmail.com
+FIRST_SUPERUSER_PASSWORD=AIwwrD6Pu1JmUP83ezylFyry35K4ws0Cu_uQLkYj_ks
 USERS_OPEN_REGISTRATION=True
 
 # Emails
@@ -29,7 +29,7 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_PASSWORD=gsWRXxp5_xWtXT_p2eLPbc8kt5MsxyZfi-xdDQCCr2s
 
 SENTRY_DSN=
 
