--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ STACK_NAME=full-stack-fastapi-project
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
-SECRET_KEY=LtTlOIOen1Jl__njcUlf9H_l7msHXdKptkkGISEEhso
+SECRET_KEY=QXyPdkGXqNFOrxOtlhd-I9wAz5mtpjo2s4XO6HRI58w
 FIRST_SUPERUSER=dguarnizo2@gmail.com
-FIRST_SUPERUSER_PASSWORD=AIwwrD6Pu1JmUP83ezylFyry35K4ws0Cu_uQLkYj_ks
+FIRST_SUPERUSER_PASSWORD=0MOTdoLSZ4cSMlK_QErisPKRYuxuKbeMRfy-mEqyaLI
 USERS_OPEN_REGISTRATION=True
 
 # Emails
@@ -29,9 +29,10 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=gsWRXxp5_xWtXT_p2eLPbc8kt5MsxyZfi-xdDQCCr2s
-
+POSTGRES_PASSWORD=ptS1SM4P8o64LySrlhBLcGbzHbgAWTVhhAixLGLjroY
+# gsWRXxp5_xWtXT_p2eLPbc8kt5MsxyZfi-xdDQCCr2s
 SENTRY_DSN=
+
 
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
