fix: apply ruff formatting

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ USERS_OPEN_REGISTRATION=True
 # Emails
 SMTP_HOST=
 SMTP_USER=
-SMTP_PASSWORD=
+SMTP_PASSWORD=docker
 EMAILS_FROM_EMAIL=info@example.com
 SMTP_TLS=True
 SMTP_SSL=False
